[gd_scene load_steps=22 format=3 uid="uid://dpudi2skix1xp"]

[ext_resource type="PackedScene" uid="uid://ds3f6jlkv8oc0" path="res://scenes/game_scene/game.tscn" id="1_3uvcg"]
[ext_resource type="Script" path="res://scenes/main_scene/main_scene.gd" id="1_nm1y2"]
[ext_resource type="Texture2D" uid="uid://c2m3sagnev7wk" path="res://assets/sprites/title_bg.png" id="2_0ejoc"]
[ext_resource type="FontFile" uid="uid://ciiy36m75xpe5" path="res://assets/fonts/Urban 20 Basic.ttf" id="2_yybqn"]
[ext_resource type="Script" path="res://scenes/main_scene/title.gd" id="3_pavwu"]
[ext_resource type="StyleBox" uid="uid://cf8tl47h7hr6f" path="res://scenes/bg_panel.tres" id="4_pv5vu"]
[ext_resource type="FontFile" uid="uid://cps7wwwrgo0ch" path="res://assets/fonts/Yesterday Basic 10h.ttf" id="7_srwor"]
[ext_resource type="AudioStream" uid="uid://rk3m3jyeicq6" path="res://assets/audio/Air Whoosh Fast C.wav" id="8_rbqxt"]
[ext_resource type="Script" path="res://scenes/main_scene/game_over.gd" id="8_tmo3n"]
[ext_resource type="Texture2D" uid="uid://bsy1qcenyadc1" path="res://assets/sprites/loading_spinner.png" id="8_xhll5"]
[ext_resource type="AudioStream" uid="uid://chcw5u562mdxn" path="res://assets/audio/EXPLDsgn_Anime Explosion 3.wav" id="9_imp8v"]
[ext_resource type="AudioStream" uid="uid://ckscjgx4ks3ow" path="res://assets/audio/music/The Journey Ahead (loop).wav" id="10_x0s65"]
[ext_resource type="PackedScene" uid="uid://jg6wxfsjathk" path="res://scenes/leaderboard_scene/leaderboard.tscn" id="12_hiqbo"]

[sub_resource type="LabelSettings" id="LabelSettings_nps30"]
line_spacing = 0.0
font = ExtResource("2_yybqn")
font_size = 128
outline_size = 32
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_xmxoo"]
font = ExtResource("7_srwor")
font_size = 48
font_color = Color(0.294118, 0.294118, 0.294118, 1)
outline_size = 16
outline_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sijfh"]
bg_color = Color(1, 1, 1, 0)

[sub_resource type="Animation" id="Animation_0f4jh"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Vacuum:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(432, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Survivors:position:x")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(488, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("VacuumImage:position:y")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(-96, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("WhiteFlash:theme_override_styles/panel:bg_color:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/4/type = "bezier"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("PressAnyButton:modulate:a")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="Animation" id="Animation_x67b6"]
resource_name = "intro"
length = 5.0
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Vacuum:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(-432, -0.25, 0, 0.25, 0, 432, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.3)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Survivors:position:x")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1400, -0.25, 0, 0.25, 0, 488, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0.3, 0.6)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("VacuumImage:position:y")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(-1000, -0.25, 0, 0.25, 0, -110, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0.6, 1)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("WhiteFlash:theme_override_styles/panel:bg_color:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.8, 1, 1.6)
}
tracks/4/type = "bezier"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("PressAnyButton:modulate:a")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.8, 1)
}
tracks/5/type = "audio"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("SoundPlayer")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("8_rbqxt")
}, {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("8_rbqxt")
}, {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("9_imp8v")
}],
"times": PackedFloat32Array(0, 0.3, 0.8)
}
tracks/5/use_blend = true
tracks/6/type = "method"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("MusicPlayer")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(1.4),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [0.0],
"method": &"play"
}]
}
tracks/7/type = "method"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath(".")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(1.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"set_can_exit_screen"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_m7pcc"]
_data = {
"RESET": SubResource("Animation_0f4jh"),
"intro": SubResource("Animation_x67b6")
}

[sub_resource type="LabelSettings" id="LabelSettings_65721"]
font = ExtResource("7_srwor")
font_size = 128
outline_size = 32
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_amqac"]
font = ExtResource("7_srwor")
font_size = 60
outline_size = 32
outline_color = Color(0, 0, 0, 1)

[node name="MainScene" type="Node2D"]
process_mode = 3
script = ExtResource("1_nm1y2")

[node name="Game" parent="." instance=ExtResource("1_3uvcg")]
process_mode = 1

[node name="Title" type="CanvasLayer" parent="."]
process_mode = 3
layer = 10
script = ExtResource("3_pavwu")

[node name="Panel" type="Panel" parent="Title"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = ExtResource("4_pv5vu")

[node name="VacuumImage" type="TextureRect" parent="Title"]
offset_left = -333.0
offset_top = -96.0
offset_right = -13.0
offset_bottom = 84.0
scale = Vector2(4, 4)
texture = ExtResource("2_0ejoc")

[node name="Vacuum" type="Label" parent="Title"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -208.0
offset_top = -165.0
offset_right = 104.0
offset_bottom = -37.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
text = "Vacuum"
label_settings = SubResource("LabelSettings_nps30")

[node name="Survivors" type="Label" parent="Title"]
modulate = Color(0.345098, 0.0941176, 0.494118, 1)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -152.0
offset_top = -65.0
offset_right = 244.0
offset_bottom = 63.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 128
text = "Survivors"
label_settings = SubResource("LabelSettings_nps30")

[node name="PressAnyButton" type="Label" parent="Title"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -627.0
offset_top = 177.0
offset_right = 640.0
offset_bottom = 241.0
grow_horizontal = 2
grow_vertical = 2
text = "PRESS SPACE TO PLAY"
label_settings = SubResource("LabelSettings_xmxoo")
horizontal_alignment = 1
vertical_alignment = 1

[node name="PressAnyButton2" type="Label" parent="Title/PressAnyButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -633.5
offset_top = 16.0
offset_right = 633.5
offset_bottom = 80.0
grow_horizontal = 2
grow_vertical = 2
text = "PRESS L TO GO TO LEADERBOARDS"
label_settings = SubResource("LabelSettings_xmxoo")
horizontal_alignment = 1
vertical_alignment = 1

[node name="WhiteFlash" type="Panel" parent="Title"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_sijfh")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Title"]
reset_on_save = false
libraries = {
"": SubResource("AnimationLibrary_m7pcc")
}

[node name="SoundPlayer" type="AudioStreamPlayer" parent="Title"]

[node name="MusicPlayer" type="AudioStreamPlayer" parent="Title"]
stream = ExtResource("10_x0s65")
volume_db = -10.306

[node name="GameOver" type="CanvasLayer" parent="." node_paths=PackedStringArray("score_label", "high_score_label")]
process_mode = 3
layer = 10
visible = false
script = ExtResource("8_tmo3n")
score_label = NodePath("VBoxContainer/ScoreBox/Score")
high_score_label = NodePath("VBoxContainer/HighScoreBox/Score")

[node name="BG" type="Panel" parent="GameOver"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = ExtResource("4_pv5vu")

[node name="GAME OVER" type="Label" parent="GameOver"]
anchors_preset = 10
anchor_right = 1.0
offset_left = 94.0
offset_bottom = 231.0
grow_horizontal = 2
text = "Game"
label_settings = SubResource("LabelSettings_65721")
vertical_alignment = 1

[node name="GAME OVER2" type="Label" parent="GameOver"]
modulate = Color(0.360784, 0.180392, 0.470588, 1)
anchors_preset = 10
anchor_right = 1.0
offset_left = 326.0
offset_right = 232.0
offset_bottom = 231.0
grow_horizontal = 2
text = "Over"
label_settings = SubResource("LabelSettings_65721")
vertical_alignment = 1

[node name="PressAnyButton" type="Label" parent="GameOver"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -627.0
offset_top = 214.0
offset_right = 640.0
offset_bottom = 278.0
grow_horizontal = 2
grow_vertical = 2
text = "PRESS SPACE TO RETRY"
label_settings = SubResource("LabelSettings_xmxoo")
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="GameOver"]
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 92.0
offset_top = -168.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 2

[node name="ScoreBox" type="HBoxContainer" parent="GameOver/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="GameOver/VBoxContainer/ScoreBox"]
modulate = Color(0.607843, 0.607843, 0.607843, 1)
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
text = "Score: "
label_settings = SubResource("LabelSettings_amqac")

[node name="Score" type="Label" parent="GameOver/VBoxContainer/ScoreBox"]
layout_mode = 2
text = "0"
label_settings = SubResource("LabelSettings_amqac")

[node name="HighScoreBox" type="HBoxContainer" parent="GameOver/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="GameOver/VBoxContainer/HighScoreBox"]
modulate = Color(0.607843, 0.607843, 0.607843, 1)
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
text = "High Score: "
label_settings = SubResource("LabelSettings_amqac")

[node name="Score" type="Label" parent="GameOver/VBoxContainer/HighScoreBox"]
layout_mode = 2
text = "0"
label_settings = SubResource("LabelSettings_amqac")

[node name="NewHighScore" type="Label" parent="GameOver"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -550.0
offset_top = -39.0
offset_right = 640.0
offset_bottom = 86.0
grow_horizontal = 2
grow_vertical = 2
text = "New High score!! ------"
label_settings = SubResource("LabelSettings_xmxoo")
vertical_alignment = 1

[node name="LineEdit" type="LineEdit" parent="GameOver"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -154.0
offset_top = -17.0
offset_right = 154.0
offset_bottom = 31.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 20
placeholder_text = "username"
alignment = 1

[node name="SubmitScoreBtn" type="Button" parent="GameOver"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -154.0
offset_top = 33.0
offset_right = 153.0
offset_bottom = 81.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 20
text = "Submit Score to Leaderboard"

[node name="ScoreSaved" type="Label" parent="GameOver"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -627.0
offset_top = 72.0
offset_right = 640.0
offset_bottom = 136.0
grow_horizontal = 2
grow_vertical = 2
text = "score saved!"
label_settings = SubResource("LabelSettings_xmxoo")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScoreSavingSpinner" type="TextureRect" parent="GameOver"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -16.0
offset_top = 92.0
offset_right = 16.0
offset_bottom = 124.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(16, 16)
texture = ExtResource("8_xhll5")

[node name="Leaderboard" parent="." instance=ExtResource("12_hiqbo")]
process_mode = 3
visible = false

[connection signal="player_died" from="Game" to="." method="_on_game_player_died"]
[connection signal="pressed" from="GameOver/SubmitScoreBtn" to="GameOver" method="_on_submit_score_btn_pressed"]
[connection signal="leaderboard_closed" from="Leaderboard" to="." method="_on_leaderboard_leaderboard_closed"]
